add a background image

--- a/style.css
+++ b/style.css
@@ -19,3 +19,7 @@ body {
 div {
     text-align: center;
 }
+
+.screen {
+    background-image: url("astrology-wheel-zodiac-signs-mystery-esoteric-horoscope-vector-illustration-spiritual-tarot-poster-magic-occult-cards-265307597.webp");
+}
